--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,15 +3,32 @@ version: "3.8"
 services:
   app:
     image: app:latest
+    container_name: app
     networks:
       - app_network
     build:
       context: .
       dockerfile: ./Dockerfile
+    env_file:
+      - .env
     volumes:
       - "./:/code"
     ports:
       - "8000:8000"
+  postgres:
+    image: postgres
+    container_name: db
+    env_file:
+      - .env
+    volumes:
+       - postgres:/data/postgres
+    ports:
+      - "5432:5432"
+    networks:
+      - app_network
+
+volumes:
+  postgres:
 
 networks:
   app_network:
