--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,13 @@ readme = "README.md"
 python = "^3.12"
 fastapi = "^0.110.1"
 uvicorn = {extras = ["standard"], version = "^0.29.0"}
+sqlalchemy = "^2.0.29"
+alembic = "^1.13.1"
+isort = "^5.13.2"
+mypy = "^1.9.0"
+black = "^24.4.0"
+psycopg2-binary = "^2.9.9"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
