--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,11 @@ uvicorn = {extras = ["standard"], version = "^0.29.0"}
 sqlalchemy = "^2.0.29"
 alembic = "^1.13.1"
 isort = "^5.13.2"
-mypy = "^1.9.0"
 black = "^24.4.0"
 psycopg2-binary = "^2.9.9"
 python-dotenv = "^1.0.1"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 
 
 [build-system]
